# btw17

./: .directory  .gitignore  Abfragen.sql  Beispieldatensaetze.sql  README.md  Test_insert_ctrl.php  Test_insert_view.php  test  update_ctrl.php
CodeIgniter/: navi_ctrl.php  navi_view.php
Coole neue Website/: Parteiauswahl.php  Updateauswahl.php  Wilhelm_E_Mail.txt  admin.php  btw.php  create_table.sql  dbh.php  index.php  insert.php  insertauswahl.php  login.php  logout.php  look.php  parteiauswahl.php  protected.php  update.php  updateauswahl.php
Database/: btw17Bspdaten  create_database.sql  create_website_db.sql  vielbessereWahl.sql  wahl17.sql  wahl_17__1_2_sql.sql
Website/: manage.py
docker/: remove_all.sh  run_all_containers.sh
dockerLEMP/: docker-compose.yml
querys/: Abfragen.sql  Beispieldatensaetze.sql  Bundestagswahl_abfragen.sql  btw17.conf  btw17.config
visualisierung/src/: CMakeLists.txt
visualisierung/src/VWahl/: VWahl.pro  database.cpp  database.h  databaseDialog.cpp  databaseDialog.h  databaseDialog.ui  databasedialog.cpp  databasedialog.h  databasedialog.ui  kandidat.cpp  kandidat.h  logger.cpp  logger.h  main.cpp  main.h  partei.cpp  partei.h  plots.cpp  plots.h  plottest.cpp  plottest.h  plottest.ui  pollingstation.cpp  pollingstation.h  presentationwindow.cpp  presentationwindow.h  presentationwindow.ui  qcustomplot.h  querydialog.cpp  querydialog.h  querydialog.ui  record.cpp  record.h  settingswidget.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  vwahlexception.cpp  vwahlexception.h  wahllokal.cpp  (+3 more)
(+216 files in other folders)
